compPCRE/src/org/comp/pcre/grammar/PCRE.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PCRE.java */
package org.comp.pcre.grammar;

import org.comp.pcre.automata.QuantifierState;


public class PCRE/*@bgen(jjtree)*/implements PCRETreeConstants, PCREConstants {/*@bgen(jjtree)*/
  protected JJTPCREState jjtree = new JJTPCREState();public static void main( String[] args ) throws ParseException, TokenMgrError {
                System.out.println("oi");
                while(true)
                {

                        PCRE parser = new PCRE( System.in ) ;

                        SimpleNode val = parser.Start() ;
                        System.out.println("Val:"+val.toString());
                        val.dump("");

                }
        }

  final public SimpleNode Start() throws ParseException {
                     /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LF:
        jj_consume_token(LF);
        break;
      case 0:
        jj_consume_token(0);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                     jjtree.closeNodeScope(jjtn000, true);
                                     jjtc000 = false;
                                    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Expression() throws ParseException {
 /*@bgen(jjtree) Expression */
 SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARET:
        t1 = jj_consume_token(CARET);
                        jjtn000.jjtSetValue (t1.image);
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
        case NULL:
        case NEWLINE:
        case CARRIAGE_RETURN:
        case OPEN_ROUND_BRACKET:
        case OPEN_SQ_BRACKET:
        case ALTERNATE:
        case CHARACTER:
        case MISC:
        case ESCAPED:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
        Element();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOLLAR:
        t2 = jj_consume_token(DOLLAR);
                         jjtn000.jjtSetValue (t2.image);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Element() throws ParseException {
 /*@bgen(jjtree) Element */
  SimpleNode jjtn000 = new SimpleNode(JJTELEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALTERNATE:
        ORexp();
        break;
      case CHARACTER:
      case MISC:
      case ESCAPED:
        Chars();
        break;
      case OPEN_ROUND_BRACKET:
        ExpPRT();
        break;
      case DOT:
      case NULL:
      case NEWLINE:
      case CARRIAGE_RETURN:
        CharTypes();
        break;
      case OPEN_SQ_BRACKET:
        Range();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AST:
      case PLUS:
      case INTERROGATION:
      case OPEN_BRACKET:
        Quantifier();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ExpPRT() throws ParseException {
 /*@bgen(jjtree) PRT */
  SimpleNode jjtn000 = new SimpleNode(JJTPRT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPEN_ROUND_BRACKET);
      Expression();
      jj_consume_token(CLOSE_ROUND_BRACKET);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ORexp() throws ParseException {
    jj_consume_token(ALTERNATE);
                 SimpleNode jjtn001 = new SimpleNode(JJTOR);
                 boolean jjtc001 = true;
                 jjtree.openNodeScope(jjtn001);
    try {
      Expression();
    } catch (Throwable jjte001) {
                 if (jjtc001) {
                   jjtree.clearNodeScope(jjtn001);
                   jjtc001 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte001 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte001;}
                 }
                 if (jjte001 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte001;}
                 }
                 {if (true) throw (Error)jjte001;}
    } finally {
                 if (jjtc001) {
                   jjtree.closeNodeScope(jjtn001, true);
                 }
    }
  }

  final public void Range() throws ParseException {
 /*@bgen(jjtree) Range */
 SimpleNode jjtn000 = new SimpleNode(JJTRANGE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t1,t2,t3,t4,t5,t6;
    try {
      jj_consume_token(OPEN_SQ_BRACKET);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CARET:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
        t1 = jj_consume_token(CARET);
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CHARACTER:
          t2 = jj_consume_token(CHARACTER);
          t3 = jj_consume_token(RANGE);
          t4 = jj_consume_token(CHARACTER);
          break;
        case NUMBER:
          t2 = jj_consume_token(NUMBER);
          t3 = jj_consume_token(RANGE);
          t4 = jj_consume_token(NUMBER);
          break;
        case MISC:
        case ESCAPED:
          Chars();
          break;
        case DOT:
        case NULL:
        case NEWLINE:
        case CARRIAGE_RETURN:
          CharTypes();
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
        case NULL:
        case NEWLINE:
        case CARRIAGE_RETURN:
        case NUMBER:
        case CHARACTER:
        case MISC:
        case ESCAPED:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
      }
      jj_consume_token(CLOSE_SQ_BRACKET);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Chars() throws ParseException {
 /*@bgen(jjtree) Chars */
 SimpleNode jjtn000 = new SimpleNode(JJTCHARS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t1,t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER:
        t1 = jj_consume_token(CHARACTER);
        break;
      case MISC:
        t1 = jj_consume_token(MISC);
        break;
      case ESCAPED:
        t1 = jj_consume_token(ESCAPED);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
           jjtn000.jjtSetValue (t1.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public Token CharTypes() throws ParseException {
 /*@bgen(jjtree) CharTypes */
 SimpleNode jjtn000 = new SimpleNode(JJTCHARTYPES);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        t = jj_consume_token(DOT);
        break;
      case NULL:
        t = jj_consume_token(NULL);
        break;
      case NEWLINE:
        t = jj_consume_token(NEWLINE);
        break;
      case CARRIAGE_RETURN:
        t = jj_consume_token(CARRIAGE_RETURN);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   jjtn000.jjtSetValue (t.image);{if (true) return t;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Quantifier() throws ParseException {
 /*@bgen(jjtree) Quantifier */
  SimpleNode jjtn000 = new SimpleNode(JJTQUANTIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);QuantifierState state = new QuantifierState();
  jjtn000.jjtSetValue (state);
  Token t1,t2;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AST:
      case PLUS:
      case INTERROGATION:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AST:
          t1 = jj_consume_token(AST);
                           jjtree.closeNodeScope(jjtn000, true);
                           jjtc000 = false;
                          state.type = QuantifierState.Type.ZERO_OR_MORE; state.setValue(t1.image);
          break;
        case INTERROGATION:
          t1 = jj_consume_token(INTERROGATION);
                                     jjtree.closeNodeScope(jjtn000, true);
                                     jjtc000 = false;
                                    state.type = QuantifierState.Type.ZERO_OR_ONE; state.setValue(t1.image);
          break;
        case PLUS:
          t1 = jj_consume_token(PLUS);
                            jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
                           state.type = QuantifierState.Type.AT_LEAST_ONE; state.setValue(t1.image);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case OPEN_BRACKET:
           state.type = QuantifierState.Type.EXACTLY_X;
        jj_consume_token(OPEN_BRACKET);
        t1 = jj_consume_token(NUMBER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          jj_consume_token(COMMA);
          t2 = jj_consume_token(NUMBER);
             state.type = QuantifierState.Type.RANGED; state.setMax(t2.image);
          break;
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(CLOSE_BRACKET);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
           state.setValue(t1.image);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  /** Generated Token Manager. */
  public PCRETokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[14];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x21,0x800000,0x38509a10,0x1000000,0x38509a10,0x26100,0x800000,0x3c001a10,0x3c001a10,0x38000000,0x1a10,0x6100,0x40000,0x26100,};
   }

  /** Constructor with InputStream. */
  public PCRE(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PCRE(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PCRETokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public PCRE(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new PCRETokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public PCRE(PCRETokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(PCRETokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jjtree.reset();
    jj_gen = 0;
    for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[30];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 14; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 30; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
